--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,5 @@ jobs:
         cache: 'npm'
         cache-dependency-path: TayQuiz/package-lock.json
     - run: npm install
+    - run: npm install -g @ionic/cli
+    - run: ionic build --prod
