--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,14 @@ jobs:
     - run: npm install
     - run: npm install -g @ionic/cli
     - run: ionic build --prod
+    - name: GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v4.0.0
+      with:
+        # Build directory to deploy
+        build_dir: www
+        # Whether to treat build_dir as an absolute path
+        # absolute_build_dir: # optional, default is false
+        # Allow Jekyll to build your site
+        jekyll: false
+        verbose: true
+          
