--- a/TayQuiz/angular.json
+++ b/TayQuiz/angular.json
@@ -19,7 +19,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "www",
-            "baseHref": "/tayquiz"
+            "baseHref": "/tayquiz/"
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
