--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,16 +34,12 @@ jobs:
     - run: npm install -g @ionic/cli
     - run: npm version $(date +%Y.%m%d.%H%M)
     - run: ionic build --prod
-    - run: ls -all
+    # This cp is needed due to GitHub Pages issue, see -> https://angular.io/guide/deployment#deploy-to-github-pages
     - run: cp www/index.html www/404.html
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v4.0.0
       with:
-        # Build directory to deploy
         build_dir: TayQuiz/www
-        # Whether to treat build_dir as an absolute path
-        # absolute_build_dir: # optional, default is false
-        # Allow Jekyll to build your site
         jekyll: false
         verbose: true
       env:
